--- a/elsap/src/index.html
+++ b/elsap/src/index.html
@@ -9,6 +9,28 @@
 <body>
   <app-root></app-root>
   <app-map></app-map>
-  <app-temp></app-temp>
+
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<div id="chart" name="banner">
+</div>
+<script>
+var options = {
+  chart: {
+    type: 'bar'
+  },
+  series: [{
+    name: 'sales',
+    data: [30,40,45,50,49,60,70,91,125]
+  }],
+  xaxis: {
+    categories: [1991,1992,1993,1994,1995,1996,1997, 1998,1999]
+  }
+}
+
+var chart = new ApexCharts(document.querySelector("#chart"), options);
+
+chart.render();
+</script>
+
 </body>
 </html>
