fisinhed integrations with back end for the chart

--- a/elsap/src/index.html
+++ b/elsap/src/index.html
@@ -14,91 +14,109 @@
   <div id="chart">
   </div>
   <script>
-    // function httpGet(theUrl) {
-    //   var xmlHttp = new XMLHttpRequest();
-    //   xmlHttp.open("GET", theUrl, false); // false for synchronous request
-    //   xmlHttp.send(null);
-    //   console.log (xmlHttp.responseText)
-    //   return xmlHttp.responseText;
-    // }
-    const Http = new XMLHttpRequest();
-    const url = "https://4p9d4ru3bd.execute-api.us-east-1.amazonaws.com/prod";
-    Http.open("GET", url);
-    Http.send();
 
-    Http.onreadystatechange = (e) => {
-      console.log(Http.responseText)
+    function getTemp() {
+      return new Promise((resolve, reject) => {
+        let xhr = new XMLHttpRequest();
+
+        xhr.open('GET', "https://4p9d4ru3bd.execute-api.us-east-1.amazonaws.com/prod");
+        xhr.addEventListener('loadend', () => {
+          if (xhr.status == 200) {
+            console.log("got the response")
+            resolve(JSON.parse(xhr.responseText)
+            );
+            const obj = JSON.parse(xhr.responseText)
+            //console.log(obj.body)
+            resptemp = obj.body
+            console.log(resptemp)
+            //return String(obj.body)
+          } else {
+            console.log(xhr.responseText);
+            reject("Não foi possível obter as negociações do servidor.");
+          }
+        });
+        xhr.send();
+      })
     }
-    
-    var temp = [28, 29, 33, 36, 32, 32, 33]
-    var options = {
-      series: [
-        {
-          name: "fake_clinic_1",
-          data: temp
-        }
-      ],
-      chart: {
-        height: 350,
-        type: 'line',
-        dropShadow: {
+
+    function plotGraph() {
+      var temp = resptemp
+      var tempMin = Math.min.apply(null, resptemp) -1
+      var tempMax =  Math.max.apply(null, resptemp) + 1
+      var options = {
+        series: [
+          {
+            name: "fake_clinic_1",
+            data: temp
+          }
+        ],
+        chart: {
+          height: 350,
+          type: 'line',
+          dropShadow: {
+            enabled: true,
+            color: '#000',
+            top: 18,
+            left: 7,
+            blur: 10,
+            opacity: 0.2
+          },
+          toolbar: {
+            show: false
+          }
+        },
+        colors: ['#77B6EA', '#545454'],
+        dataLabels: {
           enabled: true,
-          color: '#000',
-          top: 18,
-          left: 7,
-          blur: 10,
-          opacity: 0.2
         },
-        toolbar: {
-          show: false
-        }
-      },
-      colors: ['#77B6EA', '#545454'],
-      dataLabels: {
-        enabled: true,
-      },
-      stroke: {
-        curve: 'smooth'
-      },
-      title: {
-        text: 'Average High & Low Temperature',
-        align: 'left'
-      },
-      grid: {
-        borderColor: '#e7e7e7',
-        row: {
-          colors: ['#f3f3f3', 'transparent'], // takes an array which will be repeated on columns
-          opacity: 0.5
+        stroke: {
+          curve: 'smooth'
         },
-      },
-      markers: {
-        size: 1
-      },
-      xaxis: {
-        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul'],
         title: {
-          text: 'Month'
-        }
-      },
-      yaxis: {
-        title: {
-          text: 'Temperature'
+          text: 'Temperature',
+          align: 'left'
         },
-        min: 5,
-        max: 40
-      },
-      legend: {
-        position: 'top',
-        horizontalAlign: 'right',
-        floating: true,
-        offsetY: -25,
-        offsetX: -5
-      }
-    };
+        grid: {
+          borderColor: '#e7e7e7',
+          row: {
+            colors: ['#f3f3f3', 'transparent'], // takes an array which will be repeated on columns
+            opacity: 0.5
+          },
+        },
+        markers: {
+          size: 1
+        },
+        xaxis: {
+          categories: [],
+          title: {
+            text: 'Time frame'
+          }
+        },
+        yaxis: {
+          title: {
+            text: 'Temperature'
+          },
+          min: tempMin,
+          max: tempMax
+        },
+        legend: {
+          position: 'top',
+          horizontalAlign: 'right',
+          floating: true,
+          offsetY: -25,
+          offsetX: -5
+        }
+      };
 
-    var chart = new ApexCharts(document.querySelector("#chart"), options);
-    chart.render();
+      var chart = new ApexCharts(document.querySelector("#chart"), options);
+      chart.render();
+    }
+    async function f1() {
+      await getTemp();
+      plotGraph();
 
+    }
+    f1()
   </script>
   <app-map></app-map>
   <div class="footer">
